--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 	<a href="index.html">Quay lai home</a>
 	<a href="gallery.html">Xem gallery</a>
 
-	<h2>Đây là trang mweb</h2>
+	<h2>Đây là trang mweb 2</h2>
 </body>
 </html>
